@@ -7,6 +7,7 @@ import static seedu.address.commons.core.Messages.MESSAGE_UNKNOWN_COMMAND;
 import static seedu.address.testutil.Assert.assertThrows;
 import static seedu.address.testutil.TypicalIndexes.INDEX_FIRST_INTERNSHIP_APPLICATION;
 
+import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -27,11 +28,14 @@ import seedu.address.logic.commands.StatisticsCommand;
 import seedu.address.logic.commands.UnarchiveCommand;
 import seedu.address.logic.parser.exceptions.ParseException;
 import seedu.address.model.internship.AddressContainsKeywordsPredicate;
+import seedu.address.model.internship.ApplicationDateIsDatePredicate;
 import seedu.address.model.internship.CompanyContainsKeywordsPredicate;
 import seedu.address.model.internship.EmailContainsKeywordsPredicate;
 import seedu.address.model.internship.InternshipApplication;
 import seedu.address.model.internship.PhoneContainsNumbersPredicate;
+import seedu.address.model.internship.PriorityContainsNumbersPredicate;
 import seedu.address.model.internship.RoleContainsKeywordsPredicate;
+import seedu.address.model.internship.StatusContainsKeywordsPredicate;
 import seedu.address.testutil.EditInternshipDescriptorBuilder;
 import seedu.address.testutil.InternshipApplicationBuilder;
 import seedu.address.testutil.InternshipApplicationUtil;
@@ -80,14 +84,19 @@ public class InternshipDiaryParserTest {
 
     @Test
     public void parseCommand_find() throws Exception {
-        List<String> keywords = Arrays.asList("c/google", "r/engineer", "a/main", "p/12345", "e/alice");
+        List<String> keywords = Arrays.asList("c/google", "r/engineer", "a/main", "p/12345", "e/alice", "d/01 02 2020",
+                "w/5", "s/Active");
         FindCommand command = (FindCommand) parser.parseCommand(
                 FindCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" ")));
-        assertEquals(new FindCommand(new CompanyContainsKeywordsPredicate(Arrays.asList("google")),
+        assertEquals(new FindCommand(List.of(new CompanyContainsKeywordsPredicate(Arrays.asList("google")),
                 new RoleContainsKeywordsPredicate(Arrays.asList("engineer")),
                 new AddressContainsKeywordsPredicate(Arrays.asList("main")),
                 new PhoneContainsNumbersPredicate(Arrays.asList("12345")),
-                new EmailContainsKeywordsPredicate(Arrays.asList("alice"))), command);
+                new EmailContainsKeywordsPredicate(Arrays.asList("alice")),
+                new ApplicationDateIsDatePredicate(LocalDate.of(2020, 02, 01)),
+                new PriorityContainsNumbersPredicate(Arrays.asList("5")),
+                new StatusContainsKeywordsPredicate(Arrays.asList("Active"))),
+                false), command);
     }
 
     @Test
